--- a/styles/menu_compras/menu_compras.css
+++ b/styles/menu_compras/menu_compras.css
@@ -1,20 +1,20 @@
 .catalogo {
   display: flex;
-  height: 100%;
+  height: auto;
   width: 100%;
 }
 
-.product {
+.catalogo__productos {
   display: flex;
   flex-direction: column;
   width: 33%;
-  height: 33%;
+  min-height: 33%;
   background-color: rgba(228, 254, 3, 0.5019607843);
   box-sizing: border-box;
   border-radius: 5px;
   margin: 5px;
 }
-.product img {
+.catalogo__productos img {
   width: 100%;
   height: 100%;
 }
@@ -27,34 +27,34 @@
   background-color: rgba(50, 254, 33, 0.5019607843);
 }
 
-.description {
+.catalogo__productos--description {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.car_function {
+.catalogo__productos--description--button {
   width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-.car_function button {
+.catalogo__productos--description--button button {
   width: 20%;
   height: 40%;
 }
 
 @media (width: 1360px) {
-  .car_function {
+  .catalogo__productos--description--button {
     justify-content: space-evenly;
   }
-  .car_function button {
+  .catalogo__productos--description--button button {
     width: 10%;
   }
 }
 @media (min-width: 1920px) {
-  .car_function button {
+  .catalogo__productos--description--button button {
     width: 10%;
   }
 }/*# sourceMappingURL=menu_compras.css.map */
