--- a/styles/button/button.css
+++ b/styles/button/button.css
@@ -5,27 +5,38 @@ body {
   padding: 20px;
 }
 
-.menu-container {
+.menu {
   position: relative;
   display: inline-block;
+  height: 80%;
 }
 
-.menu-button {
-  background-color: rgb(50, 254, 33);
-  color: white;
+.header__logo {
+  height: 80%;
+}
+
+.menu__button {
+  display: flex;
+  background-color: rgba(50, 254, 33, 0.5019607843);
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s;
+  height: auto;
+  display: flex;
+  align-content: center;
+}
+.menu__button i {
+  color: #f7af0c;
 }
 
-.menu-button:hover {
-  background-color: rgb(132, 254, 33);
+.menu__button:hover {
+  background-color: rgba(50, 254, 33, 0.5019607843);
 }
 
-.submenu {
+.menu__button--submenu {
   display: none;
   position: absolute;
   background-color: rgba(247, 175, 12, 0.5019607843);
@@ -39,8 +50,7 @@ body {
   overflow: hidden;
   right: 0%;
 }
-
-.submenu li a {
+.menu__button--submenu li a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -48,11 +58,21 @@ body {
   transition: background-color 0.3s;
 }
 
-.submenu li a:hover {
+.menu__button--submenu li a:hover {
   background-color: #ddd;
 }
 
 /* Clase para mostrar el submenú */
-.submenu.show {
+.menu__button--submenu.show {
   display: block;
+}
+
+@media (min-width: 1440px) {
+  .menu__button--submenu {
+    min-width: 10vw;
+    min-height: 10vh;
+  }
+  .menu__button--submenu li a {
+    font-size: 2em;
+  }
 }/*# sourceMappingURL=button.css.map */
