--- a/styles/button/button.scss
+++ b/styles/button/button.scss
@@ -1,30 +1,42 @@
+@use '../mixins/mixins.scss' as mix;
 /* Estilos básicos */
 body {
   font-family: Arial, sans-serif;
   padding: 20px;
 }
 
-.menu-container {
+.menu{
   position: relative;
   display: inline-block;
+  height: 80%;
 }
 
-.menu-button {
-  background-color: rgba(50, 254, 33);
-  color: white;
+.header__logo{
+  height: 80%;
+}
+
+.menu__button {
+  display: flex;
+  background-color: #32fe2180;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s;
+  height: auto;
+  display: flex;
+  align-content: center;
+  & i{
+    color: #f7af0c;
+  }
 }
 
-.menu-button:hover {
-  background-color: rgb(132, 254, 33);
+.menu__button:hover {
+  background-color: #32fe2180;
 }
 
-.submenu {
+.menu__button--submenu {
   display: none;
   position: absolute;
   background-color:(#f7af0c80);
@@ -37,22 +49,35 @@ body {
   border-radius: 4px;
   overflow: hidden;
   right: 0%;
-  
+
+  & li a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    transition: background-color 0.3s;
+  }
 }
 
-.submenu li a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  transition: background-color 0.3s;
-}
-
-.submenu li a:hover {
+.menu__button--submenu li a:hover {
   background-color: #ddd;
 }
 
 /* Clase para mostrar el submenú */
-.submenu.show {
+.menu__button--submenu.show {
   display: block;
+}
+
+@include mix.desktop-large {
+
+  .menu__button--submenu {
+  min-width: 10vw;
+  min-height: 10vh;
+  & li a{
+   font-size: 2em;
+  }
+
+}
+
+  
 }
