--- a/styles/carusel/carusel.css
+++ b/styles/carusel/carusel.css
@@ -7,13 +7,13 @@
   margin-bottom: 20px;
 }
 
-.carrusel-inner {
+.carrusel__inner {
   display: flex;
   height: 100%;
   transition: transform 0.5s ease-in-out;
 }
 
-.carrusel-item {
+.carrusel__inner--item {
   min-width: 100%;
   flex-shrink: 0;
   display: flex;
@@ -23,12 +23,12 @@
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.carrusel-item img {
+.carrusel__inner--item img {
   width: 40vw;
   height: 40vh;
 }
 
-.carrusel-control {
+.carrusel__control {
   position: absolute;
   top: 50%;
   background-color: rgba(247, 175, 12, 0.5019607843);
@@ -40,19 +40,19 @@
   z-index: 10;
 }
 
-.carrusel-control.prev {
+.carrusel__control.prev {
   left: 10px;
 }
 
-.carrusel-control.next {
+.carrusel__control.next {
   right: 10px;
 }
 
-.carrusel-control:hover {
+.carrusel__control:hover {
   background-color: #f7af0c;
 }
 
-.carrusel-indicadores {
+.carrusel__indicadores {
   position: absolute;
   bottom: 10px;
   left: 50%;
@@ -61,7 +61,7 @@
   gap: 10px;
 }
 
-.indicador {
+.carrusel__indicadores--selector {
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -69,16 +69,16 @@
   cursor: pointer;
 }
 
-.indicador.active {
+.carrusel__indicadores--selector .active {
   background-color: #32fe21;
   display: flex;
 }
 
-@media (max-width: 430px) {
+@media (max-width: 480px) {
   .carrusel {
     width: 95%;
   }
-  .carrusel-item img {
+  .carrusel__inner--item img {
     width: 80% vw;
   }
 }
@@ -87,10 +87,10 @@
     height: 100vh;
     width: 80vh;
   }
-  .carrusel .carrusel-inner {
+  .carrusel .carrusel__inner {
     width: 80vh;
   }
-  .carrusel-item img {
+  .carrusel__inner--item img {
     width: 100%;
     height: 80vh;
   }
@@ -100,7 +100,7 @@
     width: 50vw;
     height: 80vh;
   }
-  .carrusel-item img {
+  .carrusel__inner--item img {
     width: 100%;
     height: 75vh;
   }
