--- a/styles/carusel/carusel.scss
+++ b/styles/carusel/carusel.scss
@@ -9,7 +9,7 @@
     margin-bottom: 20px;
 }
 
-.carrusel-inner {
+.carrusel__inner {
     display: flex;
     height: 100%;
     transition: transform 0.5s ease-in-out;
@@ -18,7 +18,7 @@
 }
 
 
-.carrusel-item {
+.carrusel__inner--item {
     min-width: 100%;
     flex-shrink: 0;
     display: flex;           
@@ -28,12 +28,12 @@
     background-color: rgba(255,255,255,0.1); 
 }
 
-.carrusel-item img {
+.carrusel__inner--item img {
     width: 40vw;
     height: 40vh;
 }
 
-.carrusel-control {
+.carrusel__control {
     position: absolute;
     top: 50%;
     background-color:(#f7af0c80);
@@ -45,19 +45,19 @@
     z-index: 10;
 }
 
-.carrusel-control.prev {
+.carrusel__control.prev {
     left: 10px;
 }
 
-.carrusel-control.next {
+.carrusel__control.next {
     right: 10px;
 }
 
-.carrusel-control:hover {
+.carrusel__control:hover {
     background-color: (#f7af0c);
 }
 
-.carrusel-indicadores {
+.carrusel__indicadores {
     position: absolute;
     bottom: 10px;
     left: 50%;
@@ -66,7 +66,7 @@
     gap: 10px;
 }
 
-.indicador {
+.carrusel__indicadores--selector  {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -74,7 +74,7 @@
     cursor: pointer;
 }
 
-.indicador.active {
+.carrusel__indicadores--selector .active {
     background-color: #32fe21;
     display: flex;
 }
@@ -84,7 +84,7 @@
         width: 95%;
     }
 
-    .carrusel-item img {
+    .carrusel__inner--item img {
     width: 80%vw;
    
 }
@@ -95,13 +95,13 @@
     .carrusel{
         height: 100vh;
         width: 80vh;
-        .carrusel-inner{
+        .carrusel__inner{
             width: 80vh;
 
         }
     }
 
-    .carrusel-item img {
+    .carrusel__inner--item img {
     width: 100%;
     height: 80vh;
 }
@@ -112,7 +112,7 @@
         width: 50vw;
         height: 80vh;
     }
-    .carrusel-item img {
+    .carrusel__inner--item img {
     width: 100%;
     height: 75vh;
 }
