--- a/styles/cinta/cinta.css
+++ b/styles/cinta/cinta.css
@@ -1,10 +1,4 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-}
-
-.cinta-container {
+.cinta {
   width: 100%;
   overflow: hidden;
   background-color: #e4fe03;
@@ -13,14 +7,12 @@ body {
   padding: 10px 0;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
-
-.cinta-contenido {
+.cinta div {
   display: inline-block;
   padding-left: 100%;
   animation: desplazar 20s linear infinite;
 }
-
-.cinta-contenido span {
+.cinta span {
   font-family: "M PLUS 1p", sans-serif;
   font-weight: 400;
   font-style: normal;
