--- a/styles/cinta/cinta.scss
+++ b/styles/cinta/cinta.scss
@@ -1,6 +1,6 @@
-@use './mixins/mixins.scss' as mix;
+@use '../mixins/mixins.scss' as mix;
 
-.cinta-container {
+.cinta {
     width: 100%;
     overflow: hidden;
     background-color:#e4fe03;
@@ -8,24 +8,20 @@
     white-space: nowrap;
     padding: 10px 0;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    
-  
-}
 
+    & div{
+        display: inline-block;
+        padding-left: 100%;
+        animation: desplazar 20s linear infinite;}
+        & span{
+              font-family: "M PLUS 1p", sans-serif;
+                font-weight: 400;
+                font-style: normal;
+                margin-right: 40px;
+                font-size: 16px;
+                color: #f7af0c;
 
-.cinta-contenido {
-    display: inline-block;
-    padding-left: 100%;
-    animation: desplazar 20s linear infinite;
-}
-
-.cinta-contenido span {
-    font-family: "M PLUS 1p", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    margin-right: 40px;
-    font-size: 16px;
-    color: #f7af0c;
+        }
 }
 
 @keyframes desplazar {
