--- a/styles/store_function/store_function.scss
+++ b/styles/store_function/store_function.scss
@@ -1,6 +1,6 @@
-
-// ? cODIGO DE CSS PARA EL BOTON FLOTANTE //
-.bottom_button{
+@use '../mixins/mixins.scss' as mix;
+// ? CODIGO DE CSS PARA EL BOTON FLOTANTE //
+.bottom__button{
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -14,13 +14,13 @@
     transition:  all 0.3s;
 }
 
-.bottom_button:hover{
+.bottom__button:hover{
     background-color: #f7af0c80;
 }
 
 // TODO  CODIGO CSS PARA EL MENU LATERAL TIENDA//
 
-.store-menu{
+.store__Menu{
     position: fixed;
     top: 0;
     left: -100%;
@@ -58,11 +58,11 @@
 }
 
 /* Modificación para el menú cuando está activo */
-.store-menu.active {
+.store__Menu.active {
     left: 0;
 }
 
-.car_header{
+.store__Menu--header{
     display: flex;
     height: 100%;
     justify-content: space-between;
@@ -72,7 +72,7 @@
     }
 }
 
-.close-menu-btn {
+.store__Menu--header--closebtn {
     cursor: pointer;
     width: 10%;
     height: 100%;
@@ -80,38 +80,61 @@
     transition: transform 0.3s;
 }
 
-.close-menu-btn:hover {
+.store__Menu--header--closebtn:hover {
     transform: scale(1.2);
 }
 /* Estilos para los items del carrito */
-.cart-item {
-    display: flex;
+.store__Menu--list {
+    //display: flex;
     align-items: center;
     padding: 10px;
+    position: relative;
+}
+
+.store__Menu--list--items{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     border-bottom: 1px solid rgba(255,255,255,0.2);
+     & img {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        margin-right: 15px;
+    }
+
+    & span {
+        color: white;
+        font-size: 0.9rem;
+    }
+
 }
 
-.cart-item img {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    margin-right: 15px;
+
+.store__Menu--list--items--info {
+    flex-grow: 1;
+    & h4 {
+        margin: 0;
+        font-size: 16px;
+    }
+    & p {
+        margin: 5px 0 0;
+        color: #666;
+    }
 }
 
-.cart-item span {
-    color: white;
-    font-size: 0.9rem;
-}
+
 
 /* Estilo para el contenedor de items */
 #storeItems {
     max-height: 70vh;
     overflow-y: auto;
     padding: 10px;
+    
 }
 
-.cart-counter {
-    position: absolute;
+.bottom__button--cartcounter {
+   position: absolute;
     top: -5px;
     right: -5px;
     background-color: red;
@@ -120,23 +143,18 @@
     width: 20px;
     height: 20px;
     font-size: 12px;
-    display: flex;
+    display: flex !important; /* Fuerza la visualización */
     align-items: center;
     justify-content: center;
-    display: none;
+    visibility: visible; 
+    opacity: 1; 
 }
 
-.cart-icon {
+.bottom__button--carticon {
     display: block;
 }
 
-.cart-item {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-    position: relative;
-}
+
 
 .remove-item-btn {
     position: absolute;
@@ -157,23 +175,87 @@
     background: #cc0000;
 }
 
-.cart-item img {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    margin-right: 15px;
+@include mix.desktop-large {
+    .bottom__button{
+        width: 150px;
+        height: 150px;
+    }
+
+    .bottom__button--carticon{
+        font-size: 8em;
+    }
+
+
+    .store__Menu{
+        height: 15%;
+        &--header{
+            font-size: 5rem;
+        }
+        &--header--closebtn {
+            font-size: 3rem;
+            color: white;
+            width: 2.5vw;
+            height: 5vh;
+        }
+        &--list{
+            width: 100%;
+            height: auto;
+            background-color: #f7af0c;
+            &--items{
+                align-items: flex-start;
+                height: 90%;
+                background-color: #f7af0c;
+                min-width: none;
+                border-top: solid 1px black;
+                & img{
+                    height: 100%;
+                    width: 20%;
+                }
+
+                &--info {
+                    font-size: 4em;
+                    & h4 {
+                        margin: 0;
+                        font-size: 5rem;
+                    }  
+                }
+            }
+        }
+    }
+
+    .remove-item-btn{
+    width: 100px;
+    height: 100px;
+    font-size: 3em;
+    }
+
+    .catalogo__productos--description{
+        & h3{
+            font-size: 3rem;
+        }
+        &--button{
+            & p{
+                font-size: 3em;
+            }
+            & button{
+                width: 20%;
+            }
+        }
+    }
+
+    
+    .bottom__button--cartcounter {
+        width: 75px;
+        height: 75px;
+        font-size: 4em;
+   
+    }
+
+
 }
 
-.cart-item-info {
-    flex-grow: 1;
-}
-
-.cart-item-info h4 {
-    margin: 0;
-    font-size: 16px;
-}
-
-.cart-item-info p {
-    margin: 5px 0 0;
-    color: #666;
+@include mix.phones{
+    .store__Menu{
+        min-width:70vw;
+    }
 }
