--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -16,44 +16,27 @@ html{
 body{
     background-image: url("../global/FONDO.png");   
     width: 100%;
+    height: 100%;
     padding: 0;
+    margin: 0;
     
 }
 
-nav{
-    background-color: rgba(50, 254, 33, 0.85);
-    @include mix.flexcontainer(100%,6vh,center,space-between);
-    
-   
-}
-
-.menu_button{
-    width: auto;
-    height: 90%;
-}
-
-
-.nav_menu{
+header{ 
     background-color: (#32fe2180);
-    border-radius: 10px;
-    width: 15vw;
-    height: 5vh;
-    
+    @include mix.flexcontainer(100%,100%,center,space-between); 
+    height: 5%;
 }
 
-#barras{
-    color: (#f7af0c);
-
-
-}
 
 footer{
     width: 100%;
-    height: 30%;
-    background-color: rgba(50, 254, 33, 0.85);
+    height: auto;
+    background-color: (#32fe2180);
     font-family: monospace;
     font: 400;
     font-size: 0.6rem;
+
     & div{
         display: flex;
         align-items: center;
@@ -64,39 +47,21 @@ footer{
     }
 }
 
-  
+//  RESPONISVE DESIGN PHONES *********************************************************************************///
 @include mix.phones{
-
-
 body{
    background-size: cover;
-   background-repeat: no-repeat;
-    
+   background-repeat: no-repeat;    
 }
 
-nav{
-    background-color: rgba(50, 254, 33, 0.85);
-    @include mix.flexcontainer(100%,6vh,center,space-between);
-   
-}
-
-
-.nav_menu{
-    background-color: (#32fe2180);
-    border-radius: 10px;
-    width: 15vw;
-    height: 5vh;
-    
-}
-
-#barras{
-    color: (#f70c0c);
+header{
+    height: 8%;
 
 }
 
 footer{
     width: 100%;
-    height: 30%;
+    height: auto;
     background-color: rgba(50, 254, 33, 0.85);
     font-family: monospace;
     font: 400;
@@ -109,10 +74,30 @@ footer{
     & img{
         height: 5vh;
     }
-}}  
+}  
 
-@include mix.tv{
-    nav{
-        height: 15%;
+
+}
+
+/// Desktop grande (≥ 1440px) - Monitores externos grandes
+@include mix.desktop-large {
+    .menu{
+        width: 5%;
+    }
+    header{
+        height: 10%;
+    }
+    .menu__button{
+    height: 100%;
+    width: 100%;
+    & i{
+        font-size: 4em;
+    }
+    }
+
+    footer{
+        & p{
+            font-size: 1.5rem;
+        }
     }
 }
