--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -37,7 +37,7 @@ footer{
     font: 400;
     font-size: 0.6rem;
 
-    & div{
+    & article{
         display: flex;
         align-items: center;
         justify-content: center;
